Adjust padding to prevent wasting space on small devices

--- a/src/styles/documents.scss
+++ b/src/styles/documents.scss
@@ -69,4 +69,8 @@
             line-height: 20px;
         }
     }
+
+    .c-selectedFilters {
+        padding: 0 0 6px 0;
+    }
 }
