--- a/src/styles/drawer.scss
+++ b/src/styles/drawer.scss
@@ -131,4 +131,12 @@
             height: 3px;
         }
     }
+
+    .c-drawer {
+        &.active {
+            .c-drawer--header {
+                padding-bottom: 3px;
+            }
+        }
+    }
 }
